# vscode-qt-qml-vcpkg-template

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  release.bat  vcpkg.json
.github/workflows/: nsis.yml  windows.yml
.scripts/: build.bat  configure.bat
src/: main.cpp
